<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.bobbyranjan.ybsandroid.AddNewPatientFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

    <LinearLayout
        android:id="@+id/ANPHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/ANPTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/AddNewPatientTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ANPHeader"
        android:orientation="vertical">
        <EditText
            android:id="@+id/ANPPatientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/ANPName"
            android:inputType="text"/>
        <EditText
            android:id="@+id/ANPVillage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/ANPVillage"
            android:inputType="text"/>
        <EditText
            android:id="@+id/ANPHusbandName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/ANPHusbandName"
            android:inputType="text"/>
        <EditText
            android:id="@+id/ANPDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/ANPDOB"
            android:inputType="text"/>
        <EditText
            android:id="@+id/ANPAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/ANPAge"
            android:inputType="text"/>

        <Button
            android:id="@+id/ANPSave"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_save"
            android:textStyle="bold"/>

    </LinearLayout>


    </RelativeLayout>
</ScrollView>

