<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bobbyranjan.ybsandroid.SignUpActivity">


    <TextView
        android:id="@+id/tvSelectRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Select a role"
        android:textAllCaps="false" />

    <Spinner
        android:id="@+id/spRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/tvSelectRole"
        android:layout_marginTop="21dp"
        android:ems="10"/>

    <EditText
        android:id="@+id/evName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spRole"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/prompt_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/evEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/evName"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/evPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/evEmail"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/prompt_phone"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/evPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/evPhone"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/evConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/evPassword"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/prompt_cfm_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/evConfirmPassword"
        android:layout_marginTop="16dp"
        android:text="@string/action_register"/>


</RelativeLayout>
