<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:weightSum="1"
                tools:context="com.example.bobbyranjan.ybsandroid.LoginActivity">

    <!-- Login progress -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="194dp"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tlEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/evEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tlPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/evPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>

    <android.support.v4.widget.Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/login_form"/>

    <TextView
        android:id="@+id/newUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/space"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/prompt_new_user"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <android.support.v4.widget.Space
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/newUser"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/space2"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/prompt_forgot_password"
        android:textAlignment="center"
        android:textSize="18sp"/>
</RelativeLayout>
